<resources>
    <string name="app_name">GetIcons</string>

    <string name="api_key">YEV7W4NxN8EXkI9Sh9lyU2G5qymZTG4kT0iHKeW1ywAAMv0gprPQlYua2Pazr0aW</string>

    <!-- Errors/Warnings. -->
    <string name="warn_no_internet">No internet.</string>
    <string name="err_bad_response">Something went wrong, please try again.</string>
    <string name="err_typical">Oops! An error occurred.</string>
    <string name="err_download">Couldn\'t download the file</string>
    <string name="warn_select_download_format">Select a format to download first.</string>

    <!-- Messages -->
    <string name="msg_premium_download">Support for Downloading premium icons is not available yet.</string>
    <string name="msg_no_info">Info not available.</string>
    <string name="msg_downloading">Download started</string>

    <string name="tab_icon_sets">Icon Set</string>
    <string name="tab_icons">Icons</string>

    <string name="home">Home</string>
    <string name="filter">Filter content</string>
    <string name="search">Search</string>
    <string name="icons">Icons</string>
    <string name="info">Info</string>
    <string name="license_type_">License type :&#160;</string>
    <string name="navigate_back">Navigate back</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="no_icon_sets">No icon sets.</string>
    <string name="no_icon_found">No icon found.</string>
    <string name="no_items_in_the_list">No items in the list.</string>
    <string name="type_s">Type : %s</string>
    <string name="free">Free</string>
    <string name="premium">Premium</string>
    <string name="info_">Info:</string>
    <string name="icon">Icon</string>
    <string name="download">Download</string>
    <string name="type_">Type :&#160;</string>
    <string name="price_">Price :&#160;</string>
    <string name="close">Close</string>
    <string name="filter_icons">Filter Icons</string>
    <string name="premium_">Premium :</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="total_icon_sets_d">Total icon sets : %d</string>
    <string name="author_">Author :&#160;</string>
    <string name="icons_count_d">Icons count : %d</string>
    <string name="theme">Theme</string>
    <string name="start_download">Start Download</string>
    <string name="select_icon_format">Select Icon Format</string>
    <string name="download_format_s_dxd">%s %dx%d</string>

    <!-- Icon search filter option items. -->
    <string-array name="filter_by_premium_options">
        <item>Not Selected</item>
        <item>Free</item>
        <item>Premium</item>
    </string-array>

    <string-array name="filter_by_license_options">
        <item>Not Selected</item>
        <item>Commercial</item>
        <item>No Attribution</item>
    </string-array>
</resources>