<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isRetry"
            type="Boolean" />
    </data>

    <LinearLayout
        isVisible="@{isRetry}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_lg">

        <ImageView
            android:layout_width="@dimen/size_indication_icons"
            android:layout_height="@dimen/size_indication_icons"
            android:alpha="0.8"
            android:contentDescription="@string/error"
            android:src="@drawable/ic_error_24"
            app:tint="@color/error" />

        <TextView
            android:id="@+id/textErrorMessage"
            style="@style/text_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_md"
            android:text="@string/err_typical"
            android:textSize="@dimen/text_typical" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xl"
            android:padding="@dimen/margin_md"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/retry"
            android:textStyle="bold"
            app:cornerRadius="24dp" />
    </LinearLayout>
</layout>