<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingBottom="@dimen/margin_xl">

    <ImageButton
        android:id="@+id/close"
        style="@style/icon_btn_typical"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        style="@style/text_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_icon_format"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/close" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/downloadFormatChipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/toolbar_side_margin"
        android:layout_marginTop="24dp"
        android:layout_marginRight="@dimen/toolbar_side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/no_selection_warning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_lg"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/warn_select_download_format"
        android:textColor="@color/error"
        android:textSize="@dimen/text_typical"
        app:layout_constraintEnd_toEndOf="@id/downloadFormatChipGroup"
        app:layout_constraintStart_toStartOf="@id/downloadFormatChipGroup"
        app:layout_constraintTop_toBottomOf="@id/downloadFormatChipGroup"
        tools:layout_editor_absoluteX="56dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:paddingStart="32dp"
        android:paddingTop="11dp"
        android:paddingEnd="32dp"
        android:paddingBottom="10dp"
        android:soundEffectsEnabled="true"
        android:text="@string/start_download"
        android:textAllCaps="false"
        android:textSize="@dimen/text_typical"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_download"
        app:iconGravity="textStart"
        app:iconSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/no_selection_warning" />
</androidx.constraintlayout.widget.ConstraintLayout>