<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/text_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/toolbar_side_margin"
            android:layout_marginTop="@dimen/toolbar_top_margin"
            android:text="@string/home"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/searchContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="@dimen/toolbar_side_margin"
            android:background="@drawable/bg_search"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                app:queryHint="@string/search"
                app:searchIcon="@drawable/ic_search"
                tools:layout_editor_absoluteX="62dp" />

            <ImageButton
                android:id="@+id/searchFilter"
                style="@style/icon_btn_typical"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:contentDescription="@string/filter"
                android:scaleType="fitXY"
                android:src="@drawable/ic_filter" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchContainer"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabIndicatorHeight="2dp"
            app:tabMode="auto"
            app:tabSelectedTextColor="@color/text_secondary"
            app:tabTextAppearance="@style/tab_text_appearance"
            app:tabTextColor="@color/text_secondary" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>