<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="icon"
            type="com.greedygames.geticons.data.models.Icon" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:cardElevation="0dp"
        android:layout_marginBottom="26dp"
        app:cardBackgroundColor="@color/bg_secondary"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="18dp"
                app:cardElevation="1dp"
                app:cardCornerRadius="8dp"
                app:contentPadding="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    preview_url="@{icon.previewUrl}"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:contentDescription="@string/icon"
                    tools:src="@drawable/ic_premium" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="32dp"
                android:layout_height="29dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:elevation="2dp"
                android:scaleType="centerInside"
                android:src="@{icon.isPremium ? @drawable/ic_premium : @drawable/ic_free}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_free" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_md"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textSize="13dp"
                app:cornerRadius="11dp"
                app:icon="@drawable/ic_download"
                app:iconSize="12dp"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/textView13"
                style="@style/text_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/margin_sm"
                app:layout_constraintEnd_toStartOf="@+id/textView14"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView14"
                style="@style/text_secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{icon.type}"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/textView13"
                tools:text="svg, png" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_md"
                android:text="@{icon.formattedPrice}"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/download"
                app:layout_goneMarginTop="@dimen/margin_md"
                tools:text="$200" />

            <ImageView
                android:id="@+id/info"
                style="@style/icon_btn_typical"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/margin_sm"
                android:src="@drawable/ic_info"
                app:tint="@null"
                android:contentDescription="@string/info"
                app:layout_constraintBottom_toBottomOf="@+id/textView16"
                app:layout_constraintStart_toEndOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="@+id/textView16" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>